<resources>
    <string name="app_name">Fitness Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="length">Length:</string>
    <string name="speed">Speed:</string>
    <string name="time">Time:</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="km_h">0,00 км/ч</string>
    <string name="km">0,00 км</string>
</resources>